--- a/pagestyle.css
+++ b/pagestyle.css
@@ -11,6 +11,7 @@
 body{
     font-family: Poppins;
     line-height: 1.6;
+    width:100%;
     height: 100vh;
     background: url('images/bg.jpg');
     background-size: 100rem;
