--- a/pagestyle.css
+++ b/pagestyle.css
@@ -22,7 +22,7 @@ body{
 
 .container{
     width:100%;
-    height:100%;
+    height:100vh;
     overflow-y: scroll;
     scroll-behavior: smooth;   
 }
