--- a/pagestyle.css
+++ b/pagestyle.css
@@ -7,6 +7,10 @@
     user-select: none;
     text-decoration: none;
 }
+html{
+    scroll-behavior: smooth;   
+    overflow-y: scroll;
+}
 
 body{
     font-family: Poppins;
@@ -23,8 +27,6 @@ body{
 .container{
     width:100%;
     height:100vh;
-    overflow-y: scroll;
-    scroll-behavior: smooth;   
 }
 
 .navbar{
