--- a/pagestyle.css
+++ b/pagestyle.css
@@ -218,7 +218,7 @@ section#skills h1{
 }
 
 
-section#contact{
+/* section#contact{
     background-color: white;
    
 }
@@ -262,7 +262,7 @@ section#contact form input,textarea,button{
 #buttonsubmit:hover{
     background-color: rgb(70, 174, 174);
     cursor: pointer;
-}
+} */
 
 #skills table{
     width:100%;
@@ -272,12 +272,13 @@ section#contact form input,textarea,button{
 
 .footer{
     width: 100%;
-    height: 4%;
+    height: 3%;
     background-color: white;
     background-position:right;
 }
 
 .footer p{
+    padding-top: 2px;
     padding-left: 10px;
     text-align: left;
     font-size: 0.60rem;
