--- a/loadingstyle.css
+++ b/loadingstyle.css
@@ -12,6 +12,23 @@ body{
     cursor: none;
 }
 
+.container{
+    animation: fadeTransition 0.75s;
+}
+
+@keyframes fadeTransition{
+    from{
+        opacity: 0;
+        transform:rotateX(-10deg);
+    }
+
+    to{
+        opacity: 1;
+        transform:rotateX(0);
+    }
+}
+
+
 .test{
     animation: fadein 2s;
     padding: 20px;
