--- a/pagestyle.css
+++ b/pagestyle.css
@@ -17,17 +17,18 @@ body{
     line-height: 1.6;
     width:100%;
     height: 100vh;
-    background: url('images/bg.jpg');
-    background-size: 100rem;
-    background-position:center;
-    background-attachment: fixed;
 }
 
 
 .container{
     width:100%;
     height:100vh;
+    background: url('images/bg.jpg');
+    background-size: 100%;
+    background-position:center;
+    background-attachment: fixed;
 }
+
 
 .navbar{
     position:fixed;
@@ -66,12 +67,12 @@ body{
 }
 
 
+
 #color{
     color: rgb(105, 215, 215);
     display: inline-flex;
     box-shadow: 0rem 0.30rem 0rem 0rem rgb(105, 215, 215);
 }
-
 
 
 
@@ -106,12 +107,12 @@ section{
     width: 100%;
     height: 100vh;
     background-color: white;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 section#home{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: rgb(0,0,0,0.8);
     padding-top: 50px;
   
@@ -173,6 +174,9 @@ a #buttonhome:hover{
 }
 
 section#about{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: white;
 }
 
