--- a/loadingstyle.css
+++ b/loadingstyle.css
@@ -16,31 +16,14 @@ body{
     animation: fadeTransition 0.75s;
 }
 
-@keyframes fadeTransition{
-    from{
-        opacity: 0;
-        transform:rotateX(-10deg);
-    }
-
-    to{
-        opacity: 1;
-        transform:rotateX(0);
-    }
-}
-
+/*FADE IN ANIMATION PAGE*******************/
 
 .test{
     animation: fadein 2s;
     padding: 20px;
 }
 
-
-@keyframes fadein {
-    from{opacity: 1;}
-    to{opacity: 0;}
-}
-
-
+/*TEXT**************************************/
 
 .text{
 align-items: center;
@@ -55,6 +38,8 @@ text-shadow: 0 0 10px black, /* for shadow */
              0 0 30px black,
              0 0 50px rgb(250, 250, 250);
 }
+
+/*SPIN BOX*****************************/
 
 .spinner-box{
     width: 200px;
@@ -102,6 +87,28 @@ text-shadow: 0 0 10px black, /* for shadow */
     width:100%;
     height: 100%;
     background: transparent;}
+    
+
+/*KEYFRAMES**********************************/
+
+@keyframes fadeTransition{
+    from{
+        opacity: 0;
+        transform:rotateX(-10deg);
+    }
+
+    to{
+        opacity: 1;
+        transform:rotateX(0);
+    }
+}
+
+
+
+@keyframes fadein {
+    from{opacity: 1;}
+    to{opacity: 0;}
+}
 
 
 
