--- a/pagestyle.css
+++ b/pagestyle.css
@@ -205,8 +205,9 @@ section#skills{
 }
 
 section#skills h1{
-    padding-top: 100px;
-    font-size: 3rem;
+    margin: auto;
+    margin-left: 15px;
+    font-size: 5rem;
     color: white;
     letter-spacing: 0.05rem;
     font-weight: lighter;
@@ -215,15 +216,13 @@ section#skills h1{
 
 
 
-.pic2{
-    box-shadow: 1rem 1rem 1.20rem 0rem white;
-    max-width: 10rem;
-    max-height: 10rem;
-}
 
 
-/* section#contact{
+section#contact{
     background-color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
    
 }
 
@@ -266,7 +265,7 @@ section#contact form input,textarea,button{
 #buttonsubmit:hover{
     background-color: rgb(70, 174, 174);
     cursor: pointer;
-} */
+}
 
 #skills table{
     width:100%;
