--- a/pagestyle.css
+++ b/pagestyle.css
@@ -12,23 +12,22 @@ html{
     overflow-y: scroll;
 }
 
+
 body{
     font-family: Poppins;
     line-height: 1.6;
     width:100%;
     height: 100vh;
-}
 
-
-.container{
-    width:100%;
-    height:100vh;
     background: url('images/bg.jpg');
     background-size: 100%;
     background-position:center;
     background-attachment: fixed;
+
 }
 
+
+/*NAVBAR*******************************/
 
 .navbar{
     position:fixed;
@@ -101,20 +100,26 @@ body{
     
 }
 
+/*SECTION STARTS*************************/
+
 section{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-color: white;
+
+
+ 
 }
+
+/*SECTION HOME****************************/
 
 section#home{
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: rgb(0,0,0,0.8);
-    padding-top: 50px;
+    padding-top: 80px;
+    background-color: rgba(0, 0, 0, 0.8);
   
 }
 
@@ -132,13 +137,12 @@ section#home h2{
     color: white;
     letter-spacing: 0.2rem;
     font-weight: lighter;
-    padding: 20px;
+    padding-bottom: 50px;
 
 }
 
 
-
- a #buttonhome {
+a #buttonhome {
     color: white;
     font-size: medium;
     font-weight: bold;
@@ -159,25 +163,28 @@ section#home h2{
     z-index: 0;
     
 }
-
-a #buttonhome:hover{
+ a #buttonhome:hover{
     background-color: rgb(70, 174, 174);
 }
 
-.homerec{
+.whiteline{
     bottom: 0;
-    margin-top: 200px;
+    margin-top: 250px;
     width: 100%;
     height: 0.05%;
     background-color: white;
 
 }
 
+/*SECTION ABOUT**********************/
+
 section#about{
+
     align-items: center;
     justify-content: center;
     text-align: center;
     background-color: white;
+  
 }
 
 section#about h1{
@@ -200,8 +207,11 @@ section#about p{
    font-size: 1.20rem;
 
 }
+
+/*SECTION SKILLS**************************/
+
 section#skills{
-    background-color: rgb(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 section#skills h1{
@@ -215,14 +225,15 @@ section#skills h1{
 }
 
 
-
-
+/*SECTION CONTACT******************/
 
 section#contact{
-    background-color: white;
+
     align-items: center;
     justify-content: center;
     text-align: center;
+
+    background-color: white;
    
 }
 
@@ -234,6 +245,7 @@ section#contact h1{
     font-weight: lighter;
 
 }
+
 section#contact form{
     width:100%;
     height: 100%;
@@ -267,11 +279,7 @@ section#contact form input,textarea,button{
     cursor: pointer;
 }
 
-#skills table{
-    width:100%;
-    height: 100%;
-    color: white;
-}
+/*FOOTER*****************************/
 
 .footer{
     width: 100%;
