--- a/pagestyle.css
+++ b/pagestyle.css
@@ -6,6 +6,7 @@
     padding:0;
     user-select: none;
     text-decoration: none;
+    list-style: none;
 }
 html{
     scroll-behavior: smooth;   
@@ -108,6 +109,11 @@ section{
     width: 100%;
     height: 100vh;
 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+
 
  
 }
@@ -115,9 +121,6 @@ section{
 /*SECTION HOME****************************/
 
 section#home{
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     padding-top: 80px;
     background-color: rgba(0, 0, 0, 0.8);
   
@@ -180,16 +183,13 @@ a #buttonhome {
 
 section#about{
 
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     background-color: white;
   
 }
 
 section#about h1{
     font-size: 3rem;
-    color: black;
+    color:black;
     letter-spacing: 0.05rem;
     font-weight: lighter;
     padding-bottom: 50px;
@@ -215,24 +215,35 @@ section#skills{
 }
 
 section#skills h1{
-    margin: auto;
-    margin-left: 15px;
-    font-size: 5rem;
-    color: white;
+    font-size: 3rem;
+    color:white;
     letter-spacing: 0.05rem;
     font-weight: lighter;
+    margin-bottom: 3%;
+}
 
+
+
+section#skills ul li{
+    color:white;
+    letter-spacing: 0.05rem;
+}
+
+section#skills ul li:hover{
+    color: rgb(70, 174, 174);
+    font-size: 1.50rem;
+}
+
+#hrskills{
+    width: 10%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 
 /*SECTION CONTACT******************/
 
 section#contact{
-
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
     background-color: white;
    
 }
@@ -240,7 +251,7 @@ section#contact{
 section#contact h1{
     padding-top: 100px;
     font-size: 3rem;
-    color: black;
+    color:black;
     letter-spacing: 0.05rem;
     font-weight: lighter;
 
@@ -268,14 +279,14 @@ section#contact form input,textarea,button{
 #buttonsubmit{
     left:0;
     margin-left: 36%;
-    background-color: rgb(53, 53, 53);
+    background-color: rgb(70, 174, 174);
     font-size: small;
     border: 0;
     color: white;
 }
 
 #buttonsubmit:hover{
-    background-color: rgb(70, 174, 174);
+    color:black;
     cursor: pointer;
 }
 
@@ -296,3 +307,4 @@ section#contact form input,textarea,button{
     font-weight: bold;
     color:rgb(162, 162, 162);
 }
+
