--- a/pagestyle.css
+++ b/pagestyle.css
@@ -254,6 +254,7 @@ section#projects h1{
     color:black;
     letter-spacing: 0.05rem;
     font-weight: lighter;
+    padding-bottom: 50px;
 }
 
 
