--- a/loadingstyle.css
+++ b/loadingstyle.css
@@ -23,6 +23,10 @@ body{
     padding: 20px;
 }
 
+.text h6{
+    color:rgb(70, 174, 174);
+}
+
 /*TEXT**************************************/
 
 .text{
