--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 }
 
 html{
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
+    
     font-family: Poppins;
     animation: fadeTransition 0.75s;
 }
@@ -189,7 +189,8 @@ section#contact form input,button{
 
 
 .navbar ul li{
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 55px;
 
 }
 
@@ -294,7 +295,7 @@ section#contact form input,button{
 /*POPUP*/
 
 #laptop_pop,#projector_pop,#cat_pop,#clock_pop, 
-#bloopy_pop{
+#bloopy_pop, #skills_pop, #project_pop, #archived_pop, #info_pop{
     color: white;
     text-align: center;
    
@@ -317,21 +318,25 @@ section#contact form input,button{
     opacity: 1;
   }
   
-  .popup {
+  .popup { /*THE_POP_B0X_*/
             
-    margin: 20% 32%;
+    margin: 10% 33%;
     padding: 20px;
     background: #fff;
     border-radius: 5px;
-    width: 30%;
+    
     position: fixed;
     transition: all 5s ease-in-out;
+    
+    
+    width: 30%;
   }
   
   .popup h2 {
     margin-top: 0;
     color: #333;
   }
+
   .popup .close {
     position: absolute;
     top: 20px;
@@ -346,7 +351,7 @@ section#contact form input,button{
     color:rgb(70, 174, 174);
   }
 
-  .popup .content {
+  .popup .content { /*POP_BOX_CONTENT*/
     padding-top: 10%;
     color: black;
     font-weight: bold;
@@ -354,15 +359,17 @@ section#contact form input,button{
     max-height: 30%;
     overflow: auto;
   }
+
+  .popup .content a:hover{
+   color:aqua;
+  }
   
   /*RESPONSIVENESS*/
 
   @media screen and (max-width: 700px){
-    .box{
-      width: 70%;
-    }
     .popup{
-      width: 70%;
+      width: 40%;
+      height: 50%;
     }
 
     .navbar .text{
