--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,21 @@ section#contact form input,button{
   .projects h1{
     margin-top: 20px;
     text-align: center;
+    padding-bottom: 50px;
   }
-  
+
+  .projects table{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    border-color: white;
+    text-align: center;
+    color: white;
+  }
+
+  .projects table tr{
+  padding: 100px;
+}
 
 
 
