--- a/css/style.css
+++ b/css/style.css
@@ -390,14 +390,17 @@ section#contact form input,button{
   .projects table{
     width: 100%;
     height: 100%;
-    padding: 20px;
-    border-color: white;
+
     text-align: center;
     color: white;
   }
 
-  .projects table tr{
-  padding: 100px;
+
+  .projects td{
+    border: 1px;
+    border-color: white;
+    border-style: solid;
+    
 }
 
 
