--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 html{
-  overflow: hidden;
+    /* overflow: hidden; */
     font-family: Poppins;
     animation: fadeTransition 0.75s;
 }
@@ -383,7 +383,7 @@ section#contact form input,button{
   .projects h1{
     margin-top: 20px;
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
   }
 
   .projects table{
@@ -392,26 +392,38 @@ section#contact form input,button{
 
     text-align: center;
     color: white;
+
+    
   }
 
+  .projects th{
+    padding: 20px;
+    
+  }
 
   .projects td{
     border: 1px;
     border-color: white;
     border-style: solid;
-}
+
+    padding: 50px;
+    
+  }
 
   .projects tr{
   font-weight:400;
-}
+  }
 
   .projects tr a{
   color: white;
-}
+  }
 
   .projects tr a:hover{
   text-decoration:underline;
-}
+  }
+
+
+
 
 
 
