--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,21 @@ body{
 /*INTRO/2.HTML -- BLOOPY*/
 .bloopy_user{
     background-color: white;
+    width: 100%;
+    height: 100vh;
+
+   
 }
 
 .bloopy_user img{
-    margin-right: 100%;
-    padding-right: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10%;
+    display: block;
     
-    min-width: 100%;
-    max-width: 100%;
+ 
+    min-width: 20%;
+    max-width: 20%;
     animation: jump 3s ease-in-out 0s infinite alternate;
 }
 
@@ -388,7 +395,7 @@ section#contact form input,button{
 
   .projects table{
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     text-align: center;
     color: white;
@@ -396,10 +403,13 @@ section#contact form input,button{
     
   }
 
-  .projects th{
-    padding: 20px;
+  .projects table th{
+    position: sticky;
+    top:0;
+    background-color: #1b1c2a;
     
   }
+
 
   .projects td{
     border: 1px;
@@ -431,10 +441,29 @@ section#contact form input,button{
 
   /*RESPONSIVENESS*****************************/
 
-  @media screen and (max-width: 700px){
-    .popup{
-      width: 40%;
-      height: 50%;
+  @media screen and (max-width: 1000px){
+    .popup{ /*Size of the popup container*/
+      width: 60%;
+      height:50%;
+
+      padding: 0px;
+    }
+
+    .popup h2 { /*h2 title font size*/
+      padding-top: 20px;
+      font-size: medium;
+    }
+
+    .popup .content{ /*text of popup*/
+      font-size: small;
+
+      max-height: 100%;
+    }
+
+    .popup .close { /*popup close button*/
+      position: absolute;
+      top: 5px;
+      right: 30px;
     }
 
     .navbar .text{
@@ -448,6 +477,28 @@ section#contact form input,button{
     .bg{
         min-width: fit-content;
         max-width: fit-content;
+    }
+
+    .bloopy_user .typewriter h1 {
+      color: black;
+      font-size: smaller;
+    }
+
+    .bloopy_user img{
+      margin-top: 20%;
+
+      min-width: 30%;
+      max-width: 30%;
+    }
+
+    /*TABLE_PROJECTS****************/
+    .projects table{
+      font-size: smaller;
+    }
+
+    .projects td{
+      padding: 5px;
+      
     }
 
   }
