--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ section#contact form input,button{
 /*MODAL*************************************************/
 
 #laptop_pop,#projector_pop,#cat_pop,#clock_pop, 
-#bloopy_pop, #skills_pop, #project_pop, #archived_pop, #info_pop{
+#bloopy_pop, #skills_pop, #project_pop, #tools_pop, #info_pop{
     color: white;
     text-align: center;
    
